initial html analysis

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   </head>
 
   <body>
+    <!-- Could change the first div to a header tag -->
     <div class="header">
+      <!-- Why is HORISEON split like this, for colouring? Look into CSS sheet for this-->
       <h1>Hori<span class="seo">seo</span>n</h1>
+      <!-- Switch DIV to NAV and keep a tags in DIVs - links likely not to work -->
       <div>
         <ul>
           <li>
@@ -25,14 +28,18 @@
         </ul>
       </div>
     </div>
+    <!-- Main Section?-->
     <div class="hero"></div>
     <div class="content">
       <div class="search-engine-optimization">
+        <!-- Switch this div to section -->
+        <!-- Look at changing the image class and changing image to figure with alt attribute -->
         <img
           src="./assets/images/search-engine-optimization.jpg"
           class="float-left"
         />
         <h2>Search Engine Optimization</h2>
+        <!-- Switch P tags for Articles? -->
         <p>
           The dominance of mobile internet use means that users are searching
           for the right business as they travel, shop, or sit on their couch at
@@ -40,15 +47,18 @@
           visibility and find the right customers for your business.
         </p>
       </div>
+      <!-- switch to section, ID and Class cannot be the same - this will cause clashes -->
       <div
         id="online-reputation-management"
         class="online-reputation-management"
       >
+        <!-- Why is the class float-right, needs to be more specific in order to be useful in CSS -->
         <img
           src="./assets/images/online-reputation-management.jpg"
           class="float-right"
         />
         <h2>Online Reputation Management</h2>
+        <!-- Switch P tags for Articles? -->
         <p>
           The web is full of opinions, and some of these can be negative. Social
           media allows anyone with an internet connection to say whatever they
@@ -57,6 +67,7 @@
           business.
         </p>
       </div>
+      <!-- switch to section, ID and Class cannot be the same - this will cause clashes -->
       <div id="social-media-marketing" class="social-media-marketing">
         <img
           src="./assets/images/social-media-marketing.jpg"
@@ -71,9 +82,11 @@
         </p>
       </div>
     </div>
+    <!-- Switch Divs to aside? -->
     <div class="benefits">
       <div class="benefit-lead">
         <h3>Lead Generation</h3>
+        <!-- fig and figcaption? -->
         <img src="./assets/images/lead-generation.png" />
         <p>
           Inbound strategies for lead generation require less work for your
@@ -83,6 +96,7 @@
       <div class="benefit-brand">
         <h3>Brand Awareness</h3>
         <img src="./assets/images/brand-awareness.png" />
+        <!-- fig and figcaption? -->
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
@@ -90,6 +104,7 @@
       </div>
       <div class="benefit-cost">
         <h3>Cost Management</h3>
+        <!-- fig and figcaption? -->
         <img src="./assets/images/cost-management.png" />
         <p>
           As the search ranking for your business increases, your advertising
@@ -97,6 +112,8 @@
         </p>
       </div>
     </div>
+    <!-- end of main section? -->
+    <!-- change to footer -->
     <div class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
