head section: changes implemented

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>website</title>
+    <title>Horiseon: Leading Marketing Agency</title>
   </head>
 
   <body>
     <!-- Could change the first div to a header tag -->
     <div class="header">
-      <!-- Why is HORISEON split like this, for colouring? Look into CSS sheet for this-->
+      <!-- Why is Horiseon split like this, for colouring? Look into CSS sheet for this-->
       <h1>Hori<span class="seo">seo</span>n</h1>
       <!-- Switch DIV to NAV and keep a tags in DIVs - links likely not to work -->
       <div>
