initial changes made to HEADER section only

--- a/index.html
+++ b/index.html
@@ -7,27 +7,24 @@
   </head>
 
   <body>
-    <!-- Could change the first div to a header tag -->
-    <div class="header">
-      <!-- Why is Horiseon split like this, for colouring? Look into CSS sheet for this-->
+    <header class="navbar">
       <h1>Hori<span class="seo">seo</span>n</h1>
-      <!-- Switch DIV to NAV and keep a tags in DIVs - links likely not to work -->
-      <div>
-        <ul>
-          <li>
-            <a href="#search-engine-optimization">Search Engine Optimization</a>
-          </li>
-          <li>
-            <a href="#online-reputation-management"
-              >Online Reputation Management</a
-            >
-          </li>
-          <li>
-            <a href="#social-media-marketing">Social Media Marketing</a>
-          </li>
-        </ul>
-      </div>
-    </div>
+      <!-- come back to this section and review: Horiseon SEO colouring and  -->
+      <nav>
+        <div>
+          <a href="#search-engine-optimization">Search Engine Optimization</a>
+        </div>
+        <div>
+          <a href="#online-reputation-management"
+            >Online Reputation Management</a
+          >
+        </div>
+        <div>
+          <a href="#social-media-marketing">Social Media Marketing</a>
+        </div>
+      </nav>
+    </header>
+
     <!-- Main Section?-->
     <div class="hero"></div>
     <div class="content">
