--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
 
     <!-- Main Section?-->
     <main>
-      <div class="hero"></div>
+      <figure class="hero">
+        <img
+          src="./assets/images/digital-marketing-meeting.jpg"
+          alt="business people in a meeting discussing reports"
+        />
+      </figure>
+
       <div class="content">
         <div class="search-engine-optimization">
           <!-- Switch this div to section -->
