swtiched divs to sections / aside

--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
       </figure>
 
       <div class="content">
-        <div class="search-engine-optimization">
-          <!-- Switch this div to section -->
+        <section class="search-engine-optimization">
+          <!-- Can we change the whole DIV CONTENT section and replace each section with the class = content? -->
           <!-- Look at changing the image class and changing image to figure with alt attribute -->
           <img
             src="./assets/images/search-engine-optimization.jpg"
             class="float-left"
           />
+
           <h2>Search Engine Optimization</h2>
           <!-- Switch P tags for Articles? -->
           <p>
@@ -50,9 +51,9 @@
             at home. Search Engine Optimization (SEO) allows you to increase
             your visibility and find the right customers for your business.
           </p>
-        </div>
+        </section>
         <!-- switch to section, ID and Class cannot be the same - this will cause clashes -->
-        <div
+        <section
           id="online-reputation-management"
           class="online-reputation-management"
         >
@@ -70,9 +71,9 @@
             gives you the control over what potential customers see when they
             search for your business.
           </p>
-        </div>
+        </section>
         <!-- switch to section, ID and Class cannot be the same - this will cause clashes -->
-        <div id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing" class="social-media-marketing">
           <img
             src="./assets/images/social-media-marketing.jpg"
             class="float-left"
@@ -84,11 +85,11 @@
             suited to your brand, using analytics to find the right markets and
             increase your lead generation.
           </p>
-        </div>
+        </section>
       </div>
       <!-- Switch Divs to aside? -->
-      <div class="benefits">
-        <div class="benefit-lead">
+      <section class="benefits">
+        <aside class="benefit-lead">
           <h3>Lead Generation</h3>
           <!-- fig and figcaption? -->
           <img src="./assets/images/lead-generation.png" />
@@ -96,8 +97,8 @@
             Inbound strategies for lead generation require less work for your
             business, bringing customers directly to your website.
           </p>
-        </div>
-        <div class="benefit-brand">
+        </aside>
+        <aside class="benefit-brand">
           <h3>Brand Awareness</h3>
           <img src="./assets/images/brand-awareness.png" />
           <!-- fig and figcaption? -->
@@ -105,8 +106,8 @@
             Users find your business through paid and organic searches,
             increasing the search ranking and visibility for your business.
           </p>
-        </div>
-        <div class="benefit-cost">
+        </aside>
+        <aside class="benefit-cost">
           <h3>Cost Management</h3>
           <!-- fig and figcaption? -->
           <img src="./assets/images/cost-management.png" />
@@ -114,8 +115,8 @@
             As the search ranking for your business increases, your advertising
             costs decrease, and you no longer need to advertise your page.
           </p>
-        </div>
-      </div>
+        </aside>
+      </section>
     </main>
     <!-- end of main section? -->
     <!-- change to footer -->
