NAV Links issue resolved

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
       </figure>
 
       <div class="content">
-        <section class="search-engine-optimization">
+        <section
+          class="search-engine-optimization"
+          id="search-engine-optimization"
+        >
           <!-- Can we change the whole DIV CONTENT section and replace each section with the class = content? -->
           <!-- Look at changing the image class and changing image to figure with alt attribute -->
           <img
