--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <img
             src="./assets/images/search-engine-optimization.jpg"
             class="float-left"
+            alt="On top of a wooden table, there is a notepad, pencils a laptop with a magnifying glass and some coffee"
           />
 
           <h2>Search Engine Optimization</h2>
@@ -64,6 +65,7 @@
           <img
             src="./assets/images/online-reputation-management.jpg"
             class="float-right"
+            alt="a businessman on his phone, with a laptop portraying the label 'Reputation' alongside some graphs"
           />
           <h2>Online Reputation Management</h2>
           <!-- Switch P tags for Articles? -->
@@ -80,6 +82,7 @@
           <img
             src="./assets/images/social-media-marketing.jpg"
             class="float-left"
+            alt="employees around a desk with laptops and animations of social media icons"
           />
           <h2>Social Media Marketing</h2>
           <p>
@@ -95,7 +98,10 @@
         <aside class="benefit-lead">
           <h3>Lead Generation</h3>
           <!-- fig and figcaption? -->
-          <img src="./assets/images/lead-generation.png" />
+          <img
+            src="./assets/images/lead-generation.png"
+            alt="a cogwheel pushing down into a funnel with a dollar sign"
+          />
           <p>
             Inbound strategies for lead generation require less work for your
             business, bringing customers directly to your website.
@@ -103,7 +109,10 @@
         </aside>
         <aside class="benefit-brand">
           <h3>Brand Awareness</h3>
-          <img src="./assets/images/brand-awareness.png" />
+          <img
+            src="./assets/images/brand-awareness.png"
+            alt="an icon of a person in a suit with a lightbulb for a head"
+          />
           <!-- fig and figcaption? -->
           <p>
             Users find your business through paid and organic searches,
@@ -113,7 +122,10 @@
         <aside class="benefit-cost">
           <h3>Cost Management</h3>
           <!-- fig and figcaption? -->
-          <img src="./assets/images/cost-management.png" />
+          <img
+            src="./assets/images/cost-management.png"
+            alt="a symbol of cogwheels and money symbols"
+          />
           <p>
             As the search ranking for your business increases, your advertising
             costs decrease, and you no longer need to advertise your page.
@@ -124,7 +136,7 @@
     <!-- end of main section? -->
     <!-- change to footer -->
     <footer class="footer-wrapper">
-      <h2>Made with ❤️️ by Horiseon</h2>
+      <h4>Made with ❤️️ by Horiseon</h4>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
     </footer>
   </body>
