tidying up semantics and removing rough comments

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <body>
     <header class="navbar">
       <h1>Hori<span class="seo">seo</span>n</h1>
-      <!-- come back to this section and review: Horiseon SEO colouring and  -->
       <nav>
         <div>
           <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -25,7 +24,6 @@
       </nav>
     </header>
 
-    <!-- Main Section?-->
     <main>
       <figure class="hero">
         <img
@@ -34,13 +32,11 @@
         />
       </figure>
 
-      <div class="content">
+      <section class="content">
         <section
           class="search-engine-optimization"
           id="search-engine-optimization"
         >
-          <!-- Can we change the whole DIV CONTENT section and replace each section with the class = content? -->
-          <!-- Look at changing the image class and changing image to figure with alt attribute -->
           <img
             src="./assets/images/search-engine-optimization.jpg"
             class="float-left"
@@ -48,7 +44,6 @@
           />
 
           <h2>Search Engine Optimization</h2>
-          <!-- Switch P tags for Articles? -->
           <p>
             The dominance of mobile internet use means that users are searching
             for the right business as they travel, shop, or sit on their couch
@@ -56,19 +51,17 @@
             your visibility and find the right customers for your business.
           </p>
         </section>
-        <!-- switch to section, ID and Class cannot be the same - this will cause clashes -->
         <section
           id="online-reputation-management"
           class="online-reputation-management"
         >
-          <!-- Why is the class float-right, needs to be more specific in order to be useful in CSS -->
           <img
             src="./assets/images/online-reputation-management.jpg"
             class="float-right"
             alt="a businessman on his phone, with a laptop portraying the label 'Reputation' alongside some graphs"
           />
           <h2>Online Reputation Management</h2>
-          <!-- Switch P tags for Articles? -->
+
           <p>
             The web is full of opinions, and some of these can be negative.
             Social media allows anyone with an internet connection to say
@@ -77,7 +70,7 @@
             search for your business.
           </p>
         </section>
-        <!-- switch to section, ID and Class cannot be the same - this will cause clashes -->
+
         <section id="social-media-marketing" class="social-media-marketing">
           <img
             src="./assets/images/social-media-marketing.jpg"
@@ -92,8 +85,8 @@
             increase your lead generation.
           </p>
         </section>
-      </div>
-      <!-- Switch Divs to aside? -->
+      </section>
+
       <section class="benefits">
         <aside class="benefit-lead">
           <h3>Lead Generation</h3>
@@ -113,7 +106,7 @@
             src="./assets/images/brand-awareness.png"
             alt="an icon of a person in a suit with a lightbulb for a head"
           />
-          <!-- fig and figcaption? -->
+
           <p>
             Users find your business through paid and organic searches,
             increasing the search ranking and visibility for your business.
@@ -121,7 +114,7 @@
         </aside>
         <aside class="benefit-cost">
           <h3>Cost Management</h3>
-          <!-- fig and figcaption? -->
+
           <img
             src="./assets/images/cost-management.png"
             alt="a symbol of cogwheels and money symbols"
@@ -133,10 +126,8 @@
         </aside>
       </section>
     </main>
-    <!-- end of main section? -->
-    <!-- change to footer -->
     <footer class="footer-wrapper">
-      <h4>Made with ❤️️ by Horiseon</h4>
+      Made with ❤️️ by Horiseon
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
     </footer>
   </body>
