benefits section - html/css restructured

--- a/index.html
+++ b/index.html
@@ -11,21 +11,26 @@
       <h1>Hori<span class="seo">seo</span>n</h1>
       <nav>
         <div>
-          <a href="#search-engine-optimization">Search Engine Optimization</a>
+          <a href="#search-engine-optimization" class="navtags"
+            >Search Engine Optimization</a
+          >
         </div>
         <div>
-          <a href="#online-reputation-management"
+          <a href="#online-reputation-management" class="navtags"
             >Online Reputation Management</a
           >
         </div>
         <div>
-          <a href="#social-media-marketing">Social Media Marketing</a>
+          <a href="#social-media-marketing" class="navtags"
+            >Social Media Marketing</a
+          >
         </div>
       </nav>
     </header>
 
     <main>
       <figure class="hero">
+        <!-- temporarily removing image -->
         <img
           src="./assets/images/digital-marketing-meeting.jpg"
           alt="business people in a meeting discussing reports"
@@ -88,9 +93,9 @@
       </section>
 
       <section class="benefits">
-        <aside class="benefit-lead">
+        <aside class="benefit-subsection">
           <h3>Lead Generation</h3>
-          <!-- fig and figcaption? -->
+          <!-- testing the asides as one class -->
           <img
             src="./assets/images/lead-generation.png"
             alt="a cogwheel pushing down into a funnel with a dollar sign"
@@ -100,7 +105,7 @@
             business, bringing customers directly to your website.
           </p>
         </aside>
-        <aside class="benefit-brand">
+        <aside class="benefit-subsection">
           <h3>Brand Awareness</h3>
           <img
             src="./assets/images/brand-awareness.png"
@@ -112,9 +117,8 @@
             increasing the search ranking and visibility for your business.
           </p>
         </aside>
-        <aside class="benefit-cost">
+        <aside class="benefit-subsection">
           <h3>Cost Management</h3>
-
           <img
             src="./assets/images/cost-management.png"
             alt="a symbol of cogwheels and money symbols"
