fixed image issue with class

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
     </header>
 
     <main>
-      <figure class="hero">
+      <figure>
         <!-- temporarily removing image -->
         <img
+          class="hero"
           src="./assets/images/digital-marketing-meeting.jpg"
           alt="business people in a meeting discussing reports"
         />
