--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@
       </figure>
 
       <section class="content">
-        <section
-          class="search-engine-optimization"
-          id="search-engine-optimization"
-        >
+        <section id="content-box">
           <img
             src="./assets/images/search-engine-optimization.jpg"
             class="float-left"
@@ -57,10 +54,7 @@
             your visibility and find the right customers for your business.
           </p>
         </section>
-        <section
-          id="online-reputation-management"
-          class="online-reputation-management"
-        >
+        <section id="content-box">
           <img
             src="./assets/images/online-reputation-management.jpg"
             class="float-right"
@@ -77,7 +71,7 @@
           </p>
         </section>
 
-        <section id="social-media-marketing" class="social-media-marketing">
+        <section id="content-box">
           <img
             src="./assets/images/social-media-marketing.jpg"
             class="float-left"
