Navbar formatting pending fix

--- a/index.html
+++ b/index.html
@@ -9,28 +9,36 @@
   <body>
     <header class="navbar">
       <h1>Hori<span class="seo">seo</span>n</h1>
-      <nav>
-        <div>
-          <a href="#search-engine-optimization" class="navtags"
-            >Search Engine Optimization</a
-          >
-        </div>
-        <div>
-          <a href="#online-reputation-management" class="navtags"
-            >Online Reputation Management</a
-          >
-        </div>
-        <div>
-          <a href="#social-media-marketing" class="navtags"
-            >Social Media Marketing</a
-          >
-        </div>
+      <!-- Need to sort out the NavBar -->
+      <nav class="navlinks">
+        <ul class="navlinks">
+          <div>
+            <li>
+              <a href="#search-engine-optimization" class="navtags"
+                >Search Engine Optimization</a
+              >
+            </li>
+          </div>
+          <div>
+            <li>
+              <a href="#online-reputation-management" class="navtags"
+                >Online Reputation Management</a
+              >
+            </li>
+          </div>
+          <div>
+            <li>
+              <a href="#social-media-marketing" class="navtags"
+                >Social Media Marketing</a
+              >
+            </li>
+          </div>
+        </ul>
       </nav>
     </header>
 
     <main>
       <figure>
-        <!-- temporarily removing image -->
         <img
           class="hero"
           src="./assets/images/digital-marketing-meeting.jpg"
