reverting back to source code lines 13-31

--- a/index.html
+++ b/index.html
@@ -10,30 +10,24 @@
     <header class="navbar">
       <h1>Hori<span class="seo">seo</span>n</h1>
       <!-- Need to sort out the NavBar -->
-      <nav class="navlinks">
-        <ul class="navlinks">
-          <div>
+      <nav class="navbar">
+        <div>
+          <ul>
             <li>
-              <a href="#search-engine-optimization" class="navtags"
+              <a href="#search-engine-optimization"
                 >Search Engine Optimization</a
               >
             </li>
-          </div>
-          <div>
             <li>
-              <a href="#online-reputation-management" class="navtags"
+              <a href="#online-reputation-management"
                 >Online Reputation Management</a
               >
             </li>
-          </div>
-          <div>
             <li>
-              <a href="#social-media-marketing" class="navtags"
-                >Social Media Marketing</a
-              >
+              <a href="#social-media-marketing">Social Media Marketing</a>
             </li>
-          </div>
-        </ul>
+          </ul>
+        </div>
       </nav>
     </header>
 
@@ -47,7 +41,7 @@
       </figure>
 
       <section class="content">
-        <section id="content-box">
+        <section class="content-box" id="search-engine-optimization">
           <img
             src="./assets/images/search-engine-optimization.jpg"
             class="float-left"
@@ -62,14 +56,13 @@
             your visibility and find the right customers for your business.
           </p>
         </section>
-        <section id="content-box">
+        <section class="content-box" id="online-reputation-management">
           <img
             src="./assets/images/online-reputation-management.jpg"
             class="float-right"
             alt="a businessman on his phone, with a laptop portraying the label 'Reputation' alongside some graphs"
           />
           <h2>Online Reputation Management</h2>
-
           <p>
             The web is full of opinions, and some of these can be negative.
             Social media allows anyone with an internet connection to say
@@ -79,7 +72,7 @@
           </p>
         </section>
 
-        <section id="content-box">
+        <section class="content-box" id="social-media-marketing">
           <img
             src="./assets/images/social-media-marketing.jpg"
             class="float-left"
