semantic changes to images .content-box

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <body>
     <header class="navbar">
       <h1>Hori<span class="seo">seo</span>n</h1>
-      <!-- Need to sort out the NavBar -->
       <nav class="navbar">
         <div>
           <ul>
@@ -42,11 +41,13 @@
 
       <section class="content">
         <section class="content-box" id="search-engine-optimization">
-          <img
-            src="./assets/images/search-engine-optimization.jpg"
-            class="float-left"
-            alt="On top of a wooden table, there is a notepad, pencils a laptop with a magnifying glass and some coffee"
-          />
+          <figure>
+            <img
+              src="./assets/images/search-engine-optimization.jpg"
+              class="float-left"
+              alt="On top of a wooden table, there is a notepad, pencils a laptop with a magnifying glass and some coffee"
+            />
+          </figure>
 
           <h2>Search Engine Optimization</h2>
           <p>
@@ -57,11 +58,14 @@
           </p>
         </section>
         <section class="content-box" id="online-reputation-management">
-          <img
-            src="./assets/images/online-reputation-management.jpg"
-            class="float-right"
-            alt="a businessman on his phone, with a laptop portraying the label 'Reputation' alongside some graphs"
-          />
+          <figure>
+            <img
+              src="./assets/images/online-reputation-management.jpg"
+              class="float-right"
+              alt="a businessman on his phone, with a laptop portraying the label 'Reputation' alongside some graphs"
+            />
+          </figure>
+          
           <h2>Online Reputation Management</h2>
           <p>
             The web is full of opinions, and some of these can be negative.
@@ -73,11 +77,11 @@
         </section>
 
         <section class="content-box" id="social-media-marketing">
-          <img
+          <figure><img
             src="./assets/images/social-media-marketing.jpg"
             class="float-left"
             alt="employees around a desk with laptops and animations of social media icons"
-          />
+          /><figure>
           <h2>Social Media Marketing</h2>
           <p>
             Social media continues to have a sizable influence on buying habits.
