comments added to header and main

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   </head>
 
   <body>
+    <!-- header section with navbar containing links -->
     <header class="navbar">
       <h1>Hori<span class="seo">seo</span>n</h1>
+      <!-- navbar containing links -->
       <nav class="navbar">
         <div>
           <ul>
@@ -29,6 +31,7 @@
         </div>
       </nav>
     </header>
+    <!-- main section containing Image, Content Box and Aside tags -->
       <main>
         <img
           class="hero"
