footer comments added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </div>
       </nav>
     </header>
+
     <!-- main section containing Image, Content Box and Aside tags -->
       <main>
         <img
@@ -92,6 +93,7 @@
         </section>
         </section>
       
+      <!-- Aside section containing icons and brief pieces of text -->
       <section class="benefits">
         <aside class="benefit-subsection">
           <h3>Lead Generation</h3>
@@ -129,6 +131,7 @@
         </aside>
       </section>
     </main>
+    <!-- Footer section containing company information -->
     <footer class="footer-wrapper">
       Made with ❤️️ by Horiseon
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
