comments added to HTML CSS

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </nav>
     </header>
 
-    <!-- main section containing Image, Content Box and Aside tags -->
+    <!-- insert of team photo from FY2021 -->
 
     <img
       class="hero"
@@ -36,6 +36,7 @@
       alt="business people in a meeting discussing reports"
     />
 
+    <!-- main content section about key services offered to clients -->
     <main class="content">
       <section class="content-box" id="search-engine-optimization">
         <img
